# mcp-lib

./: .dockerignore  .env.example  .gitignore  01-requirements.md  02-architecture.md  03-tools-spec.md  04-data-model.md  05-security.md  06-test-plan.md  07-sprints.md  CLAUDE.md  Caddyfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: DECISIONS.md  DEPLOY.md  PLAN.md
secrets/: .gitignore  README.md  database_url.txt.example  dev_static_api_key.txt.example  dspace_service_password.txt.example  gemini_api_key.txt.example  postgres_password.txt.example
src/hpu_library_mcp/: admin_keys.py  config.py  db.py  errors.py  ingest.py  logging_setup.py  models.py  server.py
src/hpu_library_mcp/providers/: base.py  registry.py
src/hpu_library_mcp/security/: audit.py  keys.py  rate_limit.py  resolve.py
src/hpu_library_mcp/text/: extraction.py
src/hpu_library_mcp/vector/: chunker.py  embedding.py  gemini_embedding.py  queries.py  store.py
tests/: conftest.py  test_adapter_v7.py  test_admin_keys.py  test_audit.py  test_chunker.py  test_client_v7.py  test_dspace_client.py  test_extraction.py  test_gemini_embedding.py  test_ingest.py  test_keys.py  test_mapping.py  test_mapping_v7.py  test_mcp_contract.py  test_performance_bounds.py  test_provider.py  test_provider_get_text.py  test_provider_search.py  test_provider_semantic_search.py  test_rate_limit.py  test_rate_limit_integration.py  test_redact.py  test_resolve_identity.py  test_security_matrix.py  test_solr_client.py  test_solr_search.py  test_vector_queries.py  test_vector_store.py
(+12 files in other folders)
