[project]
name = "hpu-library-mcp"
version = "0.1.0"
description = "MCP Server cho hệ thống tri thức số HPU (DSpace) — search, semantic search, get item, phân quyền theo API key"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "asyncpg>=0.29",
    "pdfplumber>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
hpu-library-mcp = "hpu_library_mcp.server:main"
hpu-library-mcp-sync = "hpu_library_mcp.ingest:main"
hpu-library-mcp-keys = "hpu_library_mcp.admin_keys:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
